@startuml

title __DATAIMPORTER's Class Diagram__\n

  package programFunctions {
    package programFunctions.dataImporter {
      class DataImporter {
          - name : String
          - materials : String
          - description : String
          - atk : int
          - def : int
          - level : int
          - setID : String
          - subTypes : ArrayList<MonsterSubType>
          + DataImporter()
          + importSeries()
          - typeDeterminator()
          - createNormal()
          - createFusion()
          - createEffect()
          - createSynchro()
          - createXYZ()
          + createLink()
      }
    }
  }
  

  package programFunctions {
    package programFunctions.dataImporter {
      class PythonInterfacer {
          {static} + classifyEffect()
      }
    }
  }
  

  DataImporter o-- MonsterType : type
  DataImporter o-- MonsterAttribute : attribute
  DataImporter o-- SpellType : spellType
  DataImporter o-- TrapType : trapType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
